Allow multiple DTO-table registrations at once
This allows better handling of cross-DTO references and simplifies registration of multiple DTOs/entities
E2E test add for testing entity cross references during registration